2007-04-30  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/art.c, coders.cut.c, coders/mat.c, coders/wpg.c: Add
	support for PingImage() so that image identification is fast by
	default.  Also eliminates error message produced by mat.c due to
	rotating an image which has no pixel cache.

2007-04-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (SyncBlob): Probable fix for SourceForge bug id
	1222780 "glibc detected double free or corruption". Avoid
	unnecessary copy of blob object onto itself. Fix was already
	present in 1.2.
	* magick/pixel_cache.c (ModifyCache): Ensure that the cache nexus
	is open.  Fix for SourceForge bug id 1173713 "segfault in
	ModifyCache"
	* m4/acx_pthread.m4 (ACX_PTHREAD): Apply fixes necessary to
	support C++ compiler properly.

2007-04-09  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c (ReadWPGImage): Fix for SourceForge bug id 1431805
	"clip art wpg files cause access violation in graphics magick".

2007-04-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/GraphicsMagick.pc.in: Fix for SourceForge bug id 1576616
	"Fix includedir variable in pkg-config files".
	* magick/cache.c (GetOnePixel): Fix for SourceForge bug id 1572357
	"GetOnePixel definition appears incorrect".  It is true that this
	function is intended for read-only purposes and that the
	PixelPacket value is returned directly.
	* coders/pdf.c (WritePDFImage): Fix for SourceForge bug id 1510075
	"Failed to write PDF with JPEG compression".
	* magick/command.c (MogrifyImageCommand): Properly bubble up
	errors and terminate further mogrify processing immediately. This
	in response to SourceForge bug id 1391421 "problem doing resize on
	273x1 JPEG".
	* magick/magick.c (InitializeMagickClientPathAndName): Fix for
	SourceForge bug id 1315109 "segfault in InitializeMagick(NULL)".
	* wand/magick_wand.c (MagickGetQuantumDepth): Fix for SourceForge
	bug id 1353744 "MagickGetQuantumDepth doesn't work".
