@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2007-05-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/jpeg.c (ReadJPEGImage): Fix reading 12-bit grayscale
+<STRONG>JPEG.</STRONG>
+
+</UL>
+<p>
 2007-04-30  Fojtik Jaroslav  &lt;JaFojtik@seznam.cz&gt;
 
 <UL>
