@@ -1,3 +1,8 @@
+2007-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/jpeg.c (ReadJPEGImage): Fix reading 12-bit grayscale
+	JPEG.
+
 2007-04-30  Fojtik Jaroslav  <JaFojtik@seznam.cz>
 
 	* coders/art.c, coders.cut.c, coders/mat.c, coders/wpg.c: Add
